MB-37103: Send HCS from backfill even if zero

A high_completed_seqno (HCS) of zero is a valid value - it simply
means that this vBucket has not completed any SyncWrites.

As such, when backfilling send the a HCS even if it is zero, so it can
be received by the replica.

Change-Id: I7a1340325f139db3501caeecac245dc905a0a8ff
Reviewed-on: http://review.couchbase.org/118783
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>